# sqlitebiter

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  build_deb_package.sh  build_macos_binary.sh  build_package.sh  build_win_package.bat  cli.py  constraints.txt  enter_win_build_env.bat  gen_homebrew_formula.py  invoke_pytest.py  mypy.ini  packaging.bat  pylama.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  stale.yml
.travis/: install.sh  run_test.sh
docker/: Dockerfile  Makefile  extract_version.sh
docs/: Makefile  conf.py  index.rst  make.bat  make_readme.py  update_command_help.py
requirements/: build_requirements.txt  docs_requirements.txt  requirements.txt  test_requirements.txt
scripts/: build_linux_package.sh  build_macos_binary.sh  enter_linux_build_env.sh  gen_homebrew_formula.py  get-sqlitebiter.ps1  installer.sh  latest_release_assets.list  sqlitebiter-complete.sh
snap/: snapcraft.yaml
sqlitebiter/: __init__.py  __main__.py  __version__.py  _clrm.py  _common.py  _config.py  _const.py  _counter.py  _dict_converter.py  _enum.py  _ipynb_converter.py  _table_creator.py  _types.py  _version.py  sqlitebiter.py
test/: common.py  dataset.py  test_completion_subcommand.py  test_counter.py  test_file_subcommand.py  test_file_subcommand_fifo.py  test_file_subcommand_ipynb.py  test_file_subcommand_sqlite.py  test_ipynb_converter.py  test_sqlitebiter.py  test_sqlitebiter_file.py  test_stdin_subcommand.py  test_text_subcommand.py  test_url_subcommand.py  (+1 more)
(+59 files in other folders)
