[build-system]
requires = ["setuptools>=49.1.1", "wheel"]

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
| test/dataset.py
'''
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.isort]
known_third_party = [
    'loguru',
    'pytest',
    'readmemaker',
    'responses',
    'sphinx_rtd_theme',
    'xlsxwriter',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.mypy]
ignore_missing_imports = true
python_version = 3.6

pretty = true

check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "test",
]

md_report = true
md_report_verbose = 0
md_report_color = "auto"

discord_verbose = 1
